crates/rome_js_formatter/tests/specs/prettier/typescript/class/generics.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 123
expression: generics.ts

---
# Input
```js
class<T> implements Map<T> {}

interface AudioBufferList {
	mBuffers: interop.Reference<any /*AudioBuffer*/>;
}

```

# Output
```js
class<T> implements Map<T> {}

interface AudioBufferList { mBuffers: interop.Reference<any /*AudioBuffer*/ > }

```

# Errors
```
error[SyntaxError]: class declarations must have a name
  ┌─ generics.ts:1:1
  │
1 │ class<T> implements Map<T> {}
  │ ^^^^^


```


